update person
